# book-graph-analyzer

./: .gitignore  README.md  check_events.py  check_graph.py  check_timeline.py  docker-compose.yml  find_crossref.py  pyproject.toml
data/corpus/: tolkien_test.json
data/exports/: .gitkeep  hobbit_full_graph.html  hobbit_graph.html
data/output/: fellowship_events.json  hobbit_ch1_bible.json  hobbit_ch1_bible_hf.json  hobbit_ch1_bible_llm.json  hobbit_ch1_timeline.json  hobbit_ch5_events.json  hobbit_events.json  silmarillion_bible.json  silmarillion_events.json  silmarillion_timeline.json
data/output/silmarillion/: style_fingerprint.json  voice_profiles.json
data/seeds/: .gitkeep  characters.json  objects.json  places.json
data/style/: hobbit_ch1_style.json  hobbit_full_style.json
data/voice/: hobbit_all_voices.json  hobbit_ch1_voices.json  hobbit_voices.json
data/worldbible/: hobbit_ch1_bible.json
docs/: ARCHITECTURE.md  DATA_MODEL.md  DEVELOPMENT.md  GENERATION_RESEARCH.md  GRAPH_SCHEMA.md  IMPLEMENTATION_PLAN.md  STYLE_ANALYSIS_RESEARCH.md  VISION.md
scripts/: build_full_graph.py  check_rels.py  cooccurrence_graph.py  create_graph_image.py  load_hobbit.py  visualize_graph.py
src/book_graph_analyzer/: __init__.py  cli.py  config.py  llm.py
src/book_graph_analyzer/corpus/: __init__.py  manager.py  resolver.py
src/book_graph_analyzer/extract/: __init__.py  dynamic_resolver.py  extractor.py  generic_extractor.py  ner.py  relationships.py  resolver.py
tests/: __init__.py  test_extract.py  test_relationships.py  test_splitter.py
(+34 files in other folders)
